datepicker on signup

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_auth: ^4.2.5
   google_sign_in: ^5.4.4
   http: ^0.13.5
+  intl: ^0.17.0
 
   #Google icon
   font_awesome_flutter: ^10.3.0
