--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_circular_text: "^0.3.1"
 
   firebase_auth: ^4.2.5
   google_sign_in: ^5.4.4
   http: ^0.13.5
+  #sign in page
   intl: ^0.17.0
 
   #Google icon
