--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  flutter_cupertino_localizations: ^1.0.1
   flutter_circular_text: "^0.3.1"
 
   firebase_auth: ^4.2.5
@@ -42,6 +43,8 @@ dependencies:
   intl: ^0.17.0
   #권한요청
   permission_handler: ^10.2.0
+  #image picker
+  image_picker: ^0.8.6+1
 
   #Google icon
   font_awesome_flutter: ^10.3.0
