--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.5
   #sign in page
   intl: ^0.17.0
+  scroll_date_picker: ^3.6.1
   #권한요청
   permission_handler: ^10.2.0
   #image picker
